--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Webpage Design</title>
+    <title>Webpage</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
